Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74161

HTTP2 Accept header not indexed from static table

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.3, 5.14.0 Alpha
    • 5.12.1
    • Network: HTTP
    • None
    • Win 7 x64
    • Windows
    • ef5aefb062bf8cbfb764f2deba731d3d64069099 (qt/qtbase/5.12)

      Was doing some Wireshark analysis and noticed that the Accept header in HTTP2 gets indexed dynamically instead of from the static table.

      Appears the issue is the assumption that the static table is already sorted. The Accept header seems to be the only header in this table that isn't.

      My guess is that std::lower_bound() and/or compare() in hpacktable.cpp assume the static table is already sorted and is where the issue is.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            wallboy Adam W
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes